fix bug with backdrop on mobile

--- a/assets/scss/partials/_modal-search-offices.scss
+++ b/assets/scss/partials/_modal-search-offices.scss
@@ -158,7 +158,8 @@
                     background-color: rgba($white, 0.87);
                 }
 
-                @include breakpoint(medium down){
+                @include breakpoint(large down){
+                    backdrop-filter: unset;
                     background-color: transparent;
 
                     @supports ((-webkit-backdrop-filter: blur(15px)) or (backdrop-filter: blur(15px))) {
